fix: overflow fixed

--- a/sass/layout/_calculator.scss
+++ b/sass/layout/_calculator.scss
@@ -30,7 +30,6 @@
 
     .field-container {
       font-size: 1rem;
-      // background-color: rgba(121, 255, 104, 0.76);
 
       label {
         text-transform: uppercase;
@@ -79,7 +78,7 @@
     .output {
       line-height: 1;
       font-style: italic;
-      font-size: clamp(3rem, 1rem + 2vw, 3.5rem);
+      font-size: clamp(2.1rem, 1rem + 2vw, 3.5rem);
 
       .output-num {
         color: u.$clr-primary-purple;
