--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -10,8 +10,6 @@ footer {
     .attribution {
         font-size: 11px;
         text-align: center;
-        position: absolute;
-        bottom: 0;
         margin: 1rem auto;
       }
 
